_sass/_typography.scss
$font-sans-serif: "Avenir Next", "Helvetica Neue", "Helvetica", sans-serif;
$font-serif: "sorts_mill_goudyregular", Helvetica, Arial, sans-serif;
$font-code: "Source Code Pro", Menlo, Monaco, Courier, monospace;

body {
  font:21px/1 $font-serif;
  color: #666;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  line-height:1.3;
}

h1 {
  font-size: 30px;
  letter-spacing: -1px;
  color: #222;
  font-weight: bold;
}

h2 {
  font: italic 19px/1.3em Georgia,serif;
  color: #bbb;
}

/* Typography */
/*Accent color*/
a,
a:hover,
#title,
a:hover .dates,
#title:hover {
  text-decoration: none;
  color: #5badf0;
  color: #5694f1;
}

p a { color: #5694f1; }

ul  { margin:0; padding:0; }
li  { list-style-type:circle; }
ol li { list-style-type:decimal; }

/* Spacing */
h1, 
h2,
h3, 
h4, 
h5, 
p, 
ul, 
ol, 
ul li, 
ol li,
pre {
  margin-bottom: 20px;
}

h1 {
  margin-top: 40px;
}

/* Line Height */
p { line-height:1.7; }



b, strong { 
  font-weight: bold;
  color: #1E2025; 
}
em, i { 
  font-style: italic; 
  font-family: $font-serif;
}

h3, h4, h5 { color:#333; }

h3 { font-size:20px; font-weight: bold; }
h4 { font-size:16px; font-weight: bold; }
h5 { font-size:15px; font-weight: bold; }

h6 {
  font-size: 13px;
  font-weight: bold;
  color: #666;
  margin-bottom: 6px;
}

p.small {
  color: #bbb;
  font-size: 14px;
  line-height: 1.5;
  display: block;
}

blockquote {
  padding-left: 15px;
  border-left: 3px solid #eee;
}

hr {
  display: block;
  border: none;
  height: 1px;
  margin: 40px auto;
  background: #eee;
}

code,
span.code { 
  font-family: $font-code; 
  font-size: 0.8em;
  background: rgba(0,0,0,0.05);
  padding: 0.2em;
}

pre {
  white-space:pre-wrap;
  padding:10px;
  overflow:auto;
  border-radius: 3px;
  /* match Tomorrow Night theme */
  background: #1D1F21 none repeat scroll 0% 0%; 
  font-family: $font-code;
  font-size: 13px;
  line-height: 1.5em;
  font-weight: normal;
  color: #d0d4d7;

}

table {
  width: 100%;
  margin: 40px 0;
  border-collapse: collapse;
  font-size: 13px;
  line-height: 1.5em;
}

th,td {
  text-align: left;
  padding-right: 20px;
  vertical-align: top;
}

table td,td {
  border-spacing: none;
  border-style: solid;
  padding: 10px 15px;
  border-width: 1px 0 0 0;
}

tr>td {
  border-top: 1px solid #eaeaea;
}

tr:nth-child(odd)>td {
  background: #fcfcfc;
}

thead th,th {
  text-align: left;
  padding: 10px 15px;
  height: 20px;
  font-size: 13px;
  font-weight: bold;
  color: #444;
  border-bottom: 1px solid #dadadc;
  cursor: default;
  white-space: nowrap;
}

img {
  width: 100%;
  max-width: 100%;
  border-radius: 3px;
}

/**
 * Footnotes
 */

a[rel="footnote"] {
  font-family: $font-sans-serif;
  font-size:small; 
  vertical-align:top;
  &::before {
    content: "[";
  }
  &::after {
    content: "]";
  }
}

.footnotes {
  font-family: $font-sans-serif;
  font-size: 0.7em;
  color: #999;

  a {
    word-wrap: break-word;
  }
}

/* Made with Cactus Badge */
#badge {
  position: absolute;
  bottom: 8px;
  right: 8px;
  height: 48px;
  width: 48px;
}

#title {
  display: inline-block;
  line-height: 100%;
  font-weight: bold;
  font-size: 19px;
  margin: 0;
  padding-bottom: 20px;
}

.description {
  float: right;
  font: italic 14px/1.4em "sorts_mill_goudyitalic", Helvetica,Arial,sans-serif;
  color: #aaa;
}

.post header {
  text-align:center;

}

.post h1 {
  margin-bottom:2 0px;
  color: #222;
  font: bold 32px/1.4em $font-serif;
}

.post h2 {
  margin-bottom: 40px;
    font: bold 24px/1.5 $font-serif;
    color: #111;
}


.post .post-headline {
  font: bold 13px/1.5em $font-serif;
  margin: -5px 0 40px 0;
  color: #b2b9be;
    font-size: 13px;
    text-transform: uppercase;
    letter-spacing: 2px;
    /*margin-top: 15px;*/
    display: inline-block;
}

.post-list-description {
  font: normal 17px/1.5em $font-serif;
  color: #aaa;
  max-width: 400px;
  margin-top: 2px;
}

/*=========================================
Post List
=========================================== */
#post-list,#archive-list {
  margin-top: 100px;
}

#post-list li,#archive-list li {
  list-style-type: none;
}

#post-list li:last-child {
  margin-bottom: 0;
}

#post-list li+li {
  padding-top: 20px;
  border-top: 1px solid #eee;
}

#post-list a {
  color: #333;
  display: block;
  font: bold 19px/1.7 $font-serif;
}

#post-list .dates {
  float: right;
  position: relative;
  top: 1px;
  font: normal 17px/1.8 $font-serif;
  color: #bbb;
}

#post-list-footer {
  border-top: 1px solid #eee;
  margin-top: 20px;
  padding-top: 100px;
}

#archive-link {
  display: inline-block;
  font-size: 13px;
  font-weight: bold;
  border-radius: 4px;
  padding: 3px 10px 6px;
  box-shadow: 0 0 0 1px hsla(207,83%,80%,1);
}

#archive-link:hover {
  background: #5694f1;
  color: #fff;
  box-shadow: 0 0 0 1px #5694f1;
}

#archive-link span {
  position: relative;
  top: 0;
  font-size: 17px;
}

#footer {
  box-shadow: inset 0 1px 0 #eee;
  padding: 40px 0 0 0;
  margin-top: 100px;
  text-align: center;


  a,
  a:hover {
    color: #999;
    padding: 0 4px;
  }
}

/* Post Page */
#header {
  border-bottom: 1px solid #eee;
}

.post {
  margin: 80px 0 0 0;
}

#post-meta {
  font-size: 13px;
  font-weight: bold;
  line-height: 1.4;
  border-top: 1px solid #eee;
  padding-top: 40px;
  margin-bottom: 40px;
  padding-bottom: 40px;
  margin-top: 40px;
  color:#444;
  border-bottom: 1px solid #eee;
}

#post-meta div span {
  color: #aaa;
  font-weight: normal;
  display: block;
}

#post-meta div span.dark {
  color: #1E2025;

}

#post-meta div {
  margin: 0 25px 0 0;
  float: left;
}

/* Post Navigation */
#post-nav {
  border-top:1px solid #eee;
  text-align:center;
  padding-top:20px;
  font-size:13px;
  font-weight:normal;
  margin-top: 40px;
}

#post-nav span {
  -webkit-transition: all 0.1s linear;
  -moz-transition: all 0.1s linear;
  -ms-transition: all 0.1s linear;
  -o-transition: all 0.1s linear;
  transition: all 0.1s linear;
  position: relative;
}

#post-nav span.prev {
  float: left;
}

#post-nav span.next {
  float: right;
}

#post-nav span .arrow {
  position: relative;
  padding: 1px;
}

#post-nav span.prev:hover .arrow {
  left: -4px;
}

#post-nav span.next:hover .arrow {
  right: -4px;
}

#post-nav span.prev:hover {
  left: -3px;
}

#post-nav span.next:hover {
  right: -3px;
}

/* Archive */
h1.archive {
  margin-bottom: 0px;
}

h2.month {
  width: 100%;
  font: bold 13px/1 $font-serif;
  text-transform: uppercase;
  margin-top: 40px;
  margin-bottom: 10px;
  padding-bottom: 10px;
  border-bottom: 1px solid #eee;
}

#archive-list li:last-child {
  margin-bottom: 0;
}

#archive-list a {
  display: block;
  font: bold 17px/1.7 $font-serif;
  color: #333;
}

#archive-list .dates {
  float: right;
  position: relative;
  top: 1px;
  font: normal 17px/1.7 $font-serif;
  color: #bbb;
}

#archive-list li a:hover,#archive-list li:hover .dates {
  color: #5694f1;
}

#post-meta img.avatar {
  height: 36px;
  width: 36px;
  float: left;
  border-radius: 50%;
  margin-top: 3px;
  margin-right: 20px;
  box-shadow: 0 0 0 3px #fff, 0 0 0 4px #eee;
}

#post-list.archive.readmore h3 {
    font: 400 20px $font-serif;
    margin-bottom: 30px;
}

#post-list.archive.readmore a{
  font: 400 16px/1.6 $font-serif;
  color: #5694f1;
}

#post-list.archive.readmore a:hover{
  opacity: 0.8;
}

#post-list.archive.readmore .dates{
  font: normal 16px/1.6 $font-serif;
}

